refactor: renames project

--- a/server/app/.env
+++ b/server/app/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:root@localhost:3306/resource-manager"
+DATABASE_URL="mysql://root:root@localhost:3306/feature-manager"
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
