--- a/server/infra/docker-compose.yml
+++ b/server/infra/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: resource-manager
+      MYSQL_DATABASE: feature-manager
     ports:
       - "3306:3306"
