--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,6 +1,26 @@
 version: "3.1"
 
+volumes:
+    feature-manager-data:
+
+networks:
+  feature-manager-tier:
+    driver: bridge
+
 services:
+  server:
+    build: ./app
+    command: /bin/sh -c "/entrypoint.sh"
+    restart: always
+    ports:
+      - "5001:5001"
+    volumes:
+      - /usr/src/app
+    networks:
+      - feature-manager-tier
+    depends_on:
+      - db
+    container_name: feature-manager-server
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
@@ -10,3 +30,8 @@ services:
       MYSQL_DATABASE: feature-manager
     ports:
       - "3306:3306"
+    volumes:
+      - feature-manager-data:/var/lib/mysql
+    networks:
+      - feature-manager-tier
+    container_name: feature-manager-mysql
