--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
     "redux": "^4.2.0",
+    "redux-saga": "^1.2.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
